@@ -924,7 +924,7 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,181,196,158,10
 END
 
-ADDBP DIALOGEX 66, 83, 185, 121
+ADDBP DIALOGEX 66, 83, 196, 130
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Add Breakpoint..."
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -933,19 +933,21 @@ BEGIN
     CTEXT           "-",65534,78,5,8,8
     EDITTEXT        IDC_ADDBP_ADDR_START,48,4,30,12,ES_UPPERCASE | ES_WANTRETURN
     EDITTEXT        IDC_ADDBP_ADDR_END,83,4,30,12,ES_UPPERCASE | ES_WANTRETURN
-    CONTROL         "Read",IDC_ADDBP_MODE_R,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,20,35,12
-    CONTROL         "Write",IDC_ADDBP_MODE_W,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,45,20,35,12
-    CONTROL         "Execute",IDC_ADDBP_MODE_X,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,80,20,40,12
-    DEFPUSHBUTTON   "&OK",IDOK,47,104,42,13
-    PUSHBUTTON      "&Cancel",IDCANCEL,95,105,42,13
-    GROUPBOX        "Memory",108,6,34,174,24,WS_TABSTOP
-    CONTROL         "CPU Mem",IDC_ADDBP_MEM_CPU,"Button",BS_AUTORADIOBUTTON | WS_GROUP,10,44,50,10
-    CONTROL         "PPU Mem",IDC_ADDBP_MEM_PPU,"Button",BS_AUTORADIOBUTTON,65,44,50,10
-    CONTROL         "Sprite Mem",IDC_ADDBP_MEM_SPR,"Button",BS_AUTORADIOBUTTON,121,44,50,10
-    EDITTEXT        IDC_ADDBP_CONDITION,43,64,136,14,ES_AUTOHSCROLL
-    LTEXT           "Condition",65533,7,66,30,8
-    LTEXT           "Name",65532,8,84,20,8
-    EDITTEXT        IDC_ADDBP_NAME,43,81,136,14,ES_AUTOHSCROLL
+    CONTROL         "Read",IDC_ADDBP_MODE_R,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,25,35,12
+    CONTROL         "Write",IDC_ADDBP_MODE_W,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,49,25,35,12
+    CONTROL         "Execute",IDC_ADDBP_MODE_X,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,86,25,40,12
+    DEFPUSHBUTTON   "&OK",IDOK,99,113,42,13
+    PUSHBUTTON      "&Cancel",IDCANCEL,147,114,42,13
+    GROUPBOX        "Memory",108,9,39,174,24,WS_TABSTOP
+    CONTROL         "CPU Mem",IDC_ADDBP_MEM_CPU,"Button",BS_AUTORADIOBUTTON | WS_GROUP,13,49,50,10
+    CONTROL         "PPU Mem",IDC_ADDBP_MEM_PPU,"Button",BS_AUTORADIOBUTTON,68,49,50,10
+    CONTROL         "Sprite Mem",IDC_ADDBP_MEM_SPR,"Button",BS_AUTORADIOBUTTON,124,49,50,10
+    EDITTEXT        IDC_ADDBP_CONDITION,43,72,136,14,ES_AUTOHSCROLL
+    LTEXT           "Condition",65533,7,74,30,8
+    LTEXT           "Name",65532,8,92,20,8
+    EDITTEXT        IDC_ADDBP_NAME,43,89,136,14,ES_AUTOHSCROLL
+    CONTROL         "Forbid",IDC_ADDBP_MODE_F,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,145,6,40,12
+    GROUPBOX        "",112,3,18,185,50,WS_TABSTOP
 END
 
 NTVIEW DIALOGEX 44, 38, 355, 402
@@ -1401,6 +1403,12 @@ BEGIN
     "DEBUGGER", DIALOG
     BEGIN
         RIGHTMARGIN, 547
+    END
+
+    "ADDBP", DIALOG
+    BEGIN
+        RIGHTMARGIN, 185
+        BOTTOMMARGIN, 121
     END
 
     "MONITOR", DIALOG
